<resources>
    <string name="app_name">Damai</string>

    <string name="setYourLocation">Set Your Location</string>
    <string name="setYourLocationDesc">Your location is required for Prayer Time and Weather information</string>
    <string name="searchLocation">Search for location</string>
    <string name="useCurrentLocation">Use my Current Location</string>

    <string name="home">Home</string>
    <string name="dateHijri">18 Zulkaedah 1441</string>
    <string name="dateGregorian">20 Jul 2020</string>
    <string name="time">05 : 36 AM</string>
    <string name="currentWaktu">IMSAK</string>
    <string name="currentLocation">Kuala Terengganu</string>
    <string name="currentTemp">32 &#176;C</string>
    <string name="currentWeather">Thunderstorm</string>
    <string name="qadha">Qadha</string>
    <string name="qadhaTitle">Miss your solat?</string>
    <string name="qadhaDesc">Damai let’s you keep track on your qadha easily</string>
    <string name="addQadha">Add new qadha</string>

    <string name="prayerTime">Prayer Time</string>
    <string name="imsak">Imsak</string>
    <string name="waktuImsak">05:36</string>
    <string name="waktuImsakClock">05:36 AM</string>
    <string name="subuh">Subuh</string>
    <string name="waktuSubuh">05:46</string>
    <string name="waktuSubuhClock">05:46 AM</string>
    <string name="syuruk">Syuruk</string>
    <string name="waktuSyuruk">07:00</string>
    <string name="waktuSyurukClock">07:00 AM</string>
    <string name="dhuha">Dhuha</string>
    <string name="waktuDhuha">07:24</string>
    <string name="waktuDhuhaClock">07:24 AM</string>
    <string name="zohor">Zohor</string>
    <string name="waktuZohor">01:15</string>
    <string name="waktuZohorClock">01:15 PM</string>
    <string name="asar">Asar</string>
    <string name="waktuAsar">04:40</string>
    <string name="waktuAsarClock">04:40 PM</string>
    <string name="maghrib">Maghrib</string>
    <string name="waktuMaghrib">07:26</string>
    <string name="waktuMaghribClock">07:26 PM</string>
    <string name="isyak">Isyak</string>
    <string name="waktuIsyak">08:41</string>
    <string name="waktuIsyakClock">08:41 PM</string>



    <string name="settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="weatherDetail">Weather Detail</string>
    <string name="qadhaList">Qadha List</string>
    <string name="solatInsight">Solat Insight</string>

</resources>