<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.prayertime.PrayerTimeFragment">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/ic_chevron_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabel"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/prayerTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ibBack"
        app:layout_constraintStart_toEndOf="@id/ibBack"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vTime"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabel" />

    <ImageView
        android:id="@+id/ivCurrentLocation"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_map"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@id/tvCurrentLocation"
        app:layout_constraintEnd_toStartOf="@id/tvCurrentLocation"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/vTime"
        app:layout_constraintTop_toTopOf="@id/tvCurrentLocation" />

    <TextView
        android:id="@+id/tvCurrentLocation"
        style="@style/Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/currentLocation"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/vTime"
        app:layout_constraintStart_toEndOf="@id/ivCurrentLocation"
        app:layout_constraintTop_toTopOf="@id/vTime" />


    <TextView
        android:id="@+id/tvDateHijri"
        style="@style/Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/dateHijri"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/vTime"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentLocation"
        app:layout_constraintEnd_toStartOf="@id/tvDateGregorian"/>

    <TextView
        android:id="@+id/tvDateGregorian"
        style="@style/Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/dateGregorian"
        android:textColor="@color/white70"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentLocation"
        app:layout_constraintEnd_toEndOf="@id/vTime"
        app:layout_constraintStart_toEndOf="@id/tvDateHijri"/>

    <TextView
        android:id="@+id/tvTime"
        style="@style/Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/vTime"
        app:layout_constraintEnd_toEndOf="@id/vTime"
        app:layout_constraintTop_toBottomOf="@id/tvDateGregorian" />

    <TextView
        android:id="@+id/tvCurrentWaktu"
        style="@style/BodyMid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/currentWaktu"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/vTime"
        app:layout_constraintEnd_toEndOf="@id/vTime"
        app:layout_constraintTop_toBottomOf="@id/tvTime" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWaktuSolat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_prayer_time"
        app:layout_constraintTop_toBottomOf="@id/vTime"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>